fix layout issues on small screens

--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -1,6 +1,5 @@
 .container {
   margin: 0 auto;
-  max-width: r(320);
   padding: 0 r(16);
 
   @include breakpoint(S) {
